--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/pull-up": "^2.0.0-beta.10",
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.8.3",
+    "fastclick": "^1.0.6",
     "vue": "^2.6.14",
-    "vue-router": "^3.0.1"
+    "vue-lazyload": "^1.2.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.0",
